2000-06-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.3.tar.gz: released version 0.2.3.

	* Makefile.am: added the win/ directory to the distribution.

2000-06-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.2.tar.gz: released version 0.2.2.

	* Juergen sent a huge patch: moved parser checks to a separate
        C file, aligned error messages, aligned identifier prefixes,
        aligned MIB test suite.

	* mibs/ietf/INET-ADDRESS-MIB: added (RFC 2851).

2000-06-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: added a missing .0 instance indentifier
	for scalar objects.

	* lib/error.c: Juergen added some code for error lists and
	error handlers.
	
2000-06-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: Juergen refined the conditional expensive checks
	for identifier redefinitions.

	* lib/util.c: introduced a unique identifer prefix for util
	functions.

	* tools/dump-jax.c: fixed some compiler warnings.

	* lib/parser-smi.y: fixed some compiler warnings.
	
	* lib/parser-smi.y: adjusted lines of definition in cases of
	forward references.

	* lib/data.c (freeData): fixed a misplaced free() that caused
	endless loops.

	* mibs/ietf/: removed RFC-1213 and fixed some modules to
	import RFC1213-MIB instead of RFC-1213.

2000-06-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* configure.in: added dmalloc option.

	* lib/util.c (timegm): fixed access to freed memory. Thanks
	to Bill Fenner.

2000-06-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smistrip.in: patch to strip modules from I-Ds.

	* lib/parser-smi.y: added checks for range restrictions applied
	to enumeration types.

	* test/: adjusted LIBSMI-TEST-* mibs and dumps/ files to
	satisfy the test suite.
	
	* lib/parser-smi.y: fixed crashes in case of lowercase identifier
	DEFVALs for objects that are neither enums nor oids. Thanks to
	Bill Fenner.

	* lib/parser-smi.y (checkObjects): fixed crashes in case of
	unknown oids.
